cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/SuperTRUMP_Rent_Cash_Flow_Step__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Rent Cash Flow Step</label>
    <nameField>
        <displayFormat>RCFS-{00000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Rent Cash Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>