cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Amount_Locked__c.field-meta.xml
<CustomField>
    <fullName>Amount_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Locked</label>
    <type>Checkbox</type>
</CustomField>