cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>