cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/End_Accrual__c.field-meta.xml
<CustomField>
    <fullName>End_Accrual__c</fullName>
    <label>To</label>
    <type>Date</type>
</CustomField>