cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Payment_Timing__c.field-meta.xml
<CustomField>
    <fullName>Payment_Timing__c</fullName>
    <label>Timing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>