cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Periodicity__c.field-meta.xml
<CustomField>
    <fullName>Periodicity__c</fullName>
    <label>Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>