cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <label>Rent</label>
    <referenceTo>IST__SuperTRUMP_PQ_Rent__c</referenceTo>
    <relationshipLabel>Rent Cash Flow Steps</relationshipLabel>
    <relationshipName>Rent_Cash_Flow_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>