cashflow-mappings/force-app/main/default/objects/SuperTRUMP_Rent_Cash_Flow_Step__c/fields/Start_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Start_Accrual__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>